# 2048_IA

./: memo.txt
2048_ai/: CMakeLists.txt  cc.txt  memo.txt
2048_ai/.claude/: settings.local.json
2048_ai/src/ai/: AI.hpp  CMakeLists.txt  Expectimax.cpp  Expectimax.hpp  Heuristics.cpp  Heuristics.hpp  main.cpp
2048_ai/xyz/: memo.txt  moi.txt
